# gpsdo

./: .gitignore  .gitmodules  README.md  influx.py  som.ods
fpm-test/: README.md  fpm-test  gpsdo.short.csv  main.cpp
kicad/: BGA298C65P19X19_1300X1300X130.kicad_mod  MSP430F5171.lib  README.md  ethernet-cache.lib  ethernet.kicad_pcb  ethernet.kicad_pcb-bak  ethernet.kicad_prl  ethernet.kicad_pro  ethernet.kicad_sch  ethernet.sch  ethernet.sch-bak  fp-info-cache  gpsdo-cache.lib  gpsdo-rescue.lib  gpsdo.kicad_pcb  gpsdo.kicad_pcb-bak  gpsdo.kicad_prl  gpsdo.kicad_pro  gpsdo.kicad_sch  gpsdo.pro  gpsdo.sch  gpsdo.sch-bak  sym-lib-table
kicad/gerbers/: ethernet-B_Cu.gbr  ethernet-B_Mask.gbr  ethernet-B_Paste.gbr  ethernet-B_Silkscreen.gbr  ethernet-Edge_Cuts.gbr  ethernet-F_Cu.gbr  ethernet-F_Mask.gbr  ethernet-F_Paste.gbr  ethernet-F_Silkscreen.gbr  ethernet-NPTH.drl  ethernet-PTH.drl  ethernet-job.gbrjob  gpsdo-B_Cu.gbr  gpsdo-B_Mask.gbr  gpsdo-B_SilkS.gbr  gpsdo-Edge_Cuts.gbr  gpsdo-F_Cu.gbr  gpsdo-F_Mask.gbr  gpsdo-F_SilkS.gbr  gpsdo-NPTH.drl  gpsdo-PTH.drl
kicad/max6577/KiCADv6/: 2024-04-16_20-25-49.kicad_sym
kicad/max6577/KiCADv6/footprints.pretty/: 21-0058I_MXM-L.kicad_mod  21-0058I_MXM-M.kicad_mod  21-0058I_MXM.kicad_mod
kicad/tcxo/: sym-lib-table  tcxo.kicad_pcb  tcxo.kicad_prl  tcxo.kicad_pro  tcxo.kicad_sch
kicad/tm4c1294ncpdt/: QFP40P1600X1600X120-128N.kicad_mod  TM4C1294NCPDTI3.kicad_sym
ltspice/: poe.asc
msp430/: CMakeLists.txt  I2Croutines.c  I2Croutines.h  README.md  build.sh  config.c  config.h  dcxo.c  dcxo.h  delay.h  eeram.c  eeram.h  flash.sh  gps.c  gps.h  i2c.c  i2c.h  main.c  math.c  math.h  pid.c  pid.h  pps.c  pps.h  tcxo.c  tcxo.h  uart.c  uart.h  ubx_chksum  ubx_chksum.cpp
msp432/: README.md
ntp-test/: CMakeLists.txt  main.cpp
tm4c/: CMakeLists.txt  README.md  build.sh  debug.sh  flash.sh  flex_test.cpp  flexfis.c  flexfis.h  flexfis.sh  getgit.cmake  gpsdo.c  gpsdo.h  http.c  http.h  main.c  main.cpp  ntp.c  ntp.h  osr.c  osr.h  ptp.c  ptp.h  qnorm.c  qnorm.h  snmp.batt.c  snmp.c  snmp.gpsdo.c  snmp.h  snmp.ntp.c  snmp.ptp.c  status.c  status.cpp  status.h  status.hpp  tcomp.c  tcomp.h  test_som.cpp  tm4c1249ncpdt.ld  ttf2bmp.c
tm4c/hw/: adc.h  crc.h  emac.c  emac.h  gpio.h  i2c.h  interrupts.c  interrupts.h  register.h  ssi.h  sys.h  timer.h  uart.h
tm4c/lib/: clk.c  clk.h  delay.c  delay.cpp  delay.h  delay.hpp  epaper.c  epaper.h  epd.c  epd.h  font.c  font.h  format.c  format.cpp  format.h  format.hpp  gpio.h  gps.c  gps.cpp  gps.h  gps.hpp  interrupts.c  interrupts.h  led.c  led.cpp  led.h  led.hpp  net.c  net.cpp  net.h  net.hpp  plot.c  plot.h  rand.c  rand.cpp  rand.h  rand.hpp  random.cpp  random.hpp  run.c  (+8 more)
tm4c/lib/chrony/: addressing.h  candm.h  regression.cpp  regression.hpp  util.cpp  util.hpp
tm4c/lib/clk/: clk.c  clk.cpp  clk.h  clk.hpp  comp.c  comp.cpp  comp.h  comp.hpp  mono.c  mono.cpp  mono.h  mono.hpp  tai.c  tai.cpp  tai.h  tai.hpp  trim.c  trim.h  util.c  util.cpp  util.h  util.hpp
tm4c/lib/clock/: capture.cpp  capture.hpp  clock.cpp  clock.hpp  comp.cpp  comp.hpp  mono.cpp  mono.hpp  tai.cpp  tai.hpp  util.cpp  util.hpp
tm4c/lib/fonts/: ascii_16.c
tm4c/lib/net/: arp.c  arp.cpp  arp.h  arp.hpp  dhcp.c  dhcp.cpp  dhcp.h  dhcp.hpp  dns.c  dns.cpp  dns.h  dns.hpp  eth.c  eth.h  eth.hpp  icmp.c  icmp.cpp  icmp.h  icmp.hpp  ip.c  ip.cpp  ip.h  ip.hpp  tcp.c  tcp.h  udp.c  udp.cpp  udp.h  udp.hpp  util.c  util.cpp  util.h  util.hpp
tm4c/lib/ntp/: GPS.cpp  GPS.hpp  Peer.cpp  Peer.hpp  Source.cpp  Source.hpp  common.h  common.hpp  gps.cpp  gps.hpp  ntp.c  ntp.cpp  ntp.h  ntp.hpp  peer.c  peer.cpp  peer.h  peer.hpp  pll.c  pll.cpp  pll.h  pll.hpp  ref.c  ref.h  source.cpp  src.c  src.h  tcmp.c  tcmp.cpp  tcmp.h  tcmp.hpp
tm4c/lib/ptp/: common.c  common.cpp  common.h  common.hpp  ptp.c  ptp.cpp  ptp.h  ptp.hpp
tm4c/lib/snmp/: sensors.c  sensors.cpp  sensors.h  sensors.hpp  snmp.c  snmp.cpp  snmp.h  snmp.hpp  util.c  util.cpp  util.h  util.hpp
tm4c/ptp_ref_code/: 4034.EMACSnow.c  GmIeee1588.cpp  daemon.c
